--- a/sc-user/src/main/resources/application-dev.yml
+++ b/sc-user/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ spring:
  # 数据源 配置
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/security?characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/sucerity?characterEncoding=utf-8
     username: root
     password: root
     initialSize: 10
@@ -18,7 +18,7 @@ spring:
     testOnReturn: false
   #redis配置
   redis:
-    host: 127.0.0.1:3306
+    host: 127.0.0.1
     password: null
     database: 7
     timeout: 1800
@@ -34,7 +34,7 @@ spring:
 #    properties:
 #      mail:
 #        smtp:
-#          auth: true
+#          config: true
 #          starttls:
 #            enable: false
 #            required: false
