--- a/sc-auth/src/main/resources/application-dev.yml
+++ b/sc-auth/src/main/resources/application-dev.yml
@@ -19,7 +19,7 @@ spring:
 #    properties:
 #      mail:
 #        smtp:
-#          auth: true
+#          config: true
 #          starttls:
 #            enable: false
 #            required: false
