--- a/sc-user/pom.xml
+++ b/sc-user/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.25</version>
         </dependency>
+		<!--datasource druid-->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.1.9</version>
+		</dependency>
 	</dependencies>
 
 	<build>
