--- a/sc-auth/src/main/resources/bootstrap.yml
+++ b/sc-auth/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ eureka:
       defaultZone: http://127.0.0.1:8761/eureka/
 spring:
   application:
-    name: sc-config
+    name: sc-auth
   cloud:
     config:
       fail-fast: true
