--- a/sc-zuul/src/main/resources/bootstrap.yml
+++ b/sc-zuul/src/main/resources/bootstrap.yml
@@ -20,4 +20,14 @@ spring:
 #      label: master
   profiles:
     active: dev
-    
+     #认证与资源分离的交互配置文件
+security:
+  sessions: stateless
+  oauth2:
+    resource:
+      loadBalanced: true
+      user-info-uri: http://127.0.0.1:8766/user
+      prefer-token-info: false
+      service-id: sc-zuul
+  basic:
+    enabled: false
